--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="editor"></div>
     <div id="buttons">
       <button id="assemble" class="btn btn-success">Assemble Input</button>
-      <div class="btn-group" data-container="body" data-trigger="focus" data-toggle="popover" data-placement="top" data-html="true" data-content="To compile programs targeting the dev board, you can use <a href='C/startup.s' target='_blank'>this</a> startup file and <a href='C/linker.ld' target='_blank'>this</a> ld linker script.<p/>The source code for Example.ELF can be found <a href='C/' target='_blank'>here</a>." title="Compiling C programs">
+      <div class="btn-group" data-container="body" data-trigger="focus" data-toggle="popover" data-placement="top" data-html="true" data-content="To compile programs targeting the dev board, you can use <a href='C/startup.s' target='_blank'>this</a> startup file and <a href='C/linker.ld' target='_blank'>this</a> ld linker script.<p/>The source code for Example.ELF can be found <a href='https://github.com/smiley22/ARM.JS/tree/gh-pages/C' target='_blank'>here</a>." title="Compiling C programs">
         <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Load ELF Image <span class="caret"></span></button>
         <ul class="dropdown-menu">
           <li><a href="#" id="image">Select Local File</a></li>
