some changes to linker script and startup code

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div id="devboard" data-toggle="popover" title="Development Board" data-placement="left" data-animation="false" data-html="true" data-content="And here's some amazing content. It's very engaging. Right?">
+                          <div id="devboard" data-toggle="popover" title="Development Board" data-placement="right" data-container="body" data-trigger="hover" data-animation="false" data-html="true" data-content="And here's some amazing content. It's very engaging. Right?">
                             <div id="leds">
                               <div class="led" id="led-0"></div>
                               <div class="led" id="led-1"></div>
