--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Loader.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Loader.BinaryReader.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.LCDController.js"></script>
+		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.UART16750.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.DevBoard.js"></script>
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
