adding a bit of documentation

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <div id="devboard" data-toggle="popover" title="Development Board" data-placement="right" data-container="body" data-trigger="hover" data-animation="false" data-html="true" data-content="And here's some amazing content. It's very engaging. Right?">
+                          <div id="devboard" data-toggle="popover" title="Development Board" data-placement="right" data-container="body" data-trigger="hover" data-delay='{"show":"0", "hide":"2500"}' data-animation="false" data-html="true" data-content="The development board features:<p/><ul><li>ARM7TDMI-like Processor</li><li>512kb flash ROM</li><li>32kb static RAM</li><li>8 LEDs</li><li>10 Push Buttons (Mapped to Keyboard keys 0-9)</li><li>2-line LCD</li><li>Interrupt Controller (PICS3C4510B)</li><li>2x UARTs (16750)</li></ul><p/>You can check out the memory map and HW register description <a href='https://github.com/smiley22/ARM.JS/blob/gh-pages/Docs/DevBoard_Datasheet.pdf' target='_blank'>here</a>.">
                             <div id="leds">
                               <div class="led" id="led-0"></div>
                               <div class="led" id="led-1"></div>
