--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Loader.BinaryReader.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.LCDController.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.UART16750.js"></script>
+		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.PICS3C4510B.js"></script>
 		<script type="text/javascript" src="Simulator/ARM.Simulator.DevBoard.js"></script>
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
@@ -223,17 +224,19 @@
 hello:
     .asciz "Hello World from ARMv4T!"
 .section .text
-.equ   POWER_CONTROL_REG,         0xE01FC000
-.equ   LCDC_IOCTL_REG,            0xE000C000
-.equ   LCDC_DATA_REG,             0xE000C001
-.equ   LED_IOCTL,                 0xE0008000
-.equ   LCD_DISP_CLEAR,            0x01
-.equ   LCD_FUNCTION_SET,          0x3C
-.equ   LCD_DISP_CONTROL,          0x0F
-.equ   LCD_ENTRY_MODE,            0x06
-.equ   RAM_SIZE,                  0x00008000 @ 32kb
-.equ   RAM_BASE,                  0x00400000
-.equ   TOPSTACK,                  RAM_BASE + RAM_SIZE
+.equ   PCON,          0xE01FC000 @ Power Control Register
+.equ   LCDIOCTL,      0xE000C000 @ LCD I/O Control
+.equ   LCDDATA,       0xE000C004 @ LCD Data Transfer
+.equ   LEDSTAT,       0xE0008000 @ LED Status Register
+.equ   RAM_SIZE,      0x00008000 @ 32kb
+.equ   RAM_BASE,      0x00400000
+.equ   TOPSTACK,      RAM_BASE + RAM_SIZE
+
+@ LCD initialization commands
+.equ   LCD_CMD_DISP_CLEAR,    0x01
+.equ   LCD_CMD_FUNCTION_SET,  0x3C
+.equ   LCD_CMD_DISP_CONTROL,  0x0F
+.equ   LCD_CMD_ENTRY_MODE,    0x06
 
 @ R13 acts as stack pointer by convention
 ldr  r0,  =TOPSTACK
@@ -266,23 +269,23 @@ bl _exit
 @ sets up the LCD display
 lcd_init:
   stmfd sp!, {r0-r2,lr}
-  ldr r0, =LCD_DISP_CLEAR
+  ldr r0, =LCD_CMD_DISP_CLEAR
   bl lcd_command
   @ 2-line 5x10 dots format display mode.
-  ldr r0, =LCD_FUNCTION_SET
+  ldr r0, =LCD_CMD_FUNCTION_SET
   bl lcd_command
   @ turn display on, cursor on, blink-mode on.
-  ldr r0, =LCD_DISP_CONTROL
+  ldr r0, =LCD_CMD_DISP_CONTROL
   bl lcd_command
   @ enable cursor increment mode
-  ldr r0, =LCD_ENTRY_MODE
+  ldr r0, =LCD_CMD_ENTRY_MODE
   bl lcd_command
   ldmfd sp!, {r0-r2,lr}
   bx lr
 
 lcd_command:
   stmfd sp!, {r1-r2,lr}
-  ldr r1, =LCDC_IOCTL_REG
+  ldr r1, =LCDIOCTL
   strb r0, [r1], #0
   mov r2, #0x80
   @ pulse enable
@@ -294,7 +297,7 @@ lcd_command:
 @ clears display and resets cursor
 lcd_clear:
   stmfd sp!, {r0,lr}
-  ldr r0, =LCD_DISP_CLEAR
+  ldr r0, =LCD_CMD_DISP_CLEAR
   bl lcd_command
   ldmfd sp!, {r0,lr}
   bx lr
@@ -303,7 +306,7 @@ lcd_clear:
 @ position of the LCD cursor
 lcd_write_char:
   stmfd sp!, {r1,lr}
-  ldr r1, =LCDC_DATA_REG
+  ldr r1, =LCDDATA
   strb r0, [r1], #0
   ldmfd sp!, {r1,lr}
   bx lr
@@ -338,14 +341,14 @@ delay_end:
 flash_display:
   stmfd sp!, {r0-r1,lr}
   mov r1, #10
-  ldr r0, =LCD_DISP_CONTROL
+  ldr r0, =LCD_CMD_DISP_CONTROL
 flash_display_loop:
     bl lcd_command
     eor r0, r0, #4
     bl delay
     subs r1, r1, #1
     bne flash_display_loop
-  ldr r0, =LCD_DISP_CONTROL
+  ldr r0, =LCD_CMD_DISP_CONTROL
   bl lcd_command
   ldmfd sp!, {r0-r1,lr}
   bx lr
@@ -354,7 +357,7 @@ flash_display_loop:
 flash_leds:
   stmfd sp!, {r0-r3,lr}
   mov r1, #1
-  ldr r0, =LED_IOCTL
+  ldr r0, =LEDSTAT
 flash_leds_loop:
     strb r1, [r0], #0
     movs r1, r1, LSL #1
@@ -379,7 +382,7 @@ toggle_all_loop:
 @ halts execution
 _exit:
   @ power is turned off by setting bit 1
-  ldr r0, =POWER_CONTROL_REG
+  ldr r0, =PCON
   mov r1, #1
   strb r1, [r0]
 .end
