adding some simple timers

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <script type="text/javascript" src="Assembler/ARMv4T.Assembler.Symbols.js"></script>
     <script type="text/javascript" src="Assembler/ARMv4T.Assembler.Sections.js"></script>
     <script type="text/javascript" src="Assembler/ARMv4T.Assembler.Litpools.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Vm.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.Instructions.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.Cpsr.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Memory.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Loader.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Loader.BinaryReader.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.LCDController.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.UART16750.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.Device.PICS3C4510B.js"></script>
-		<script type="text/javascript" src="Simulator/ARM.Simulator.DevBoard.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Vm.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.Instructions.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Cpu.Cpsr.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Memory.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Loader.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Loader.BinaryReader.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Device.LCDController.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Device.UART16750.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Device.PICS3C4510B.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Device.Timer.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.DevBoard.js"></script>
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="Assets/js/codemirror.js"></script>
