--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="Simulator/ARM.Simulator.Device.UART16750.js"></script>
     <script type="text/javascript" src="Simulator/ARM.Simulator.Device.PICS3C4510B.js"></script>
     <script type="text/javascript" src="Simulator/ARM.Simulator.Device.Timer.js"></script>
+    <script type="text/javascript" src="Simulator/ARM.Simulator.Device.DS1307.js"></script>
     <script type="text/javascript" src="Simulator/ARM.Simulator.DevBoard.js"></script>
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
