--- a/HD44780U/HD44780U.html
+++ b/HD44780U/HD44780U.html
@@ -9,11 +9,11 @@
     <script src="Service.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <style>
-        div.lcd {
+        div.lcd-line {
             display: flex;
         }
 
-        div.lcd > div {
+        div.lcd-line > div {
             width: 30px;
             height: 30px;
             border: 1px solid grey;
@@ -21,11 +21,11 @@
             line-height: 30px;
         }
 
-        div.lcd.enabled > div {
+        div.lcd.enabled > div.lcd-line > div {
              border: 1px solid red;
         }
 
-        div.lcd.enabled > div.cursor {
+        div.lcd.enabled > div.lcd-line > div.cursor {
              background-color: lawngreen;
         }
 
@@ -38,7 +38,7 @@
             }
         }
 
-        div.lcd.enabled > div.cursor.blink {
+        div.lcd.enabled > div.lcd-line > div.cursor.blink {
             animation-name: example;
             animation-duration: 0.5s;
             animation-iteration-count: infinite;
@@ -181,13 +181,98 @@
         ]
     ];
 
+    var exampleTwoLineDisplay = [
+        // Step 1
+        [
+            'Power supply on (the HD44780U is initialized by the internal reset circuit)',
+            'Initialized. No display.', function () { }
+        ],
+        // Step 2
+        [
+            'Function set', 'Sets to 8-bit operation and selects 2-line display and 5 × 8 ' +
+            'dot character font. (Number of display lines and character fonts cannot be ' +
+            'changed after step #2.', function () { issueCommand(0x38); }
+        ],
+        // Step 3
+        [
+            'Display on/off control', 'Turns on display and cursor. Entire display is in ' +
+            'space mode because of initialization.', function () { issueCommand(0x0E); }
+        ],
+        // Step 4
+        [
+            'Entry mode set', 'Sets mode to increment the address by one and to shift the ' +
+            'cursor to the right at the time of write to the DD/CGRAM. Display is not ' +
+            'shifted.', function () { issueCommand(0x06); }
+        ],
+        // Step 5
+        [
+            'Write data to CGRAM/DDRAM', 'Writes H. DDRAM has already been selected by ' +
+            'initialization when the power was turned on. The cursor is incremented by ' +
+            'one and shifted to the right.', function () {
+                issueCommand('H'.charCodeAt(0), false, true);
+            }
+        ],
+        // Step 6 - 7
+        [
+            'Write data to CGRAM/DDRAM', 'Writes data.', function () {
+                var w = 'ITACHI';
+                for (var i = 0; i < w.length; i++)
+                    issueCommand(w.charCodeAt(i), false, true);
+            }
+        ],
+        // Step 8
+        [
+            'Set DDRAM address', 'Sets DDRAM address so that the cursor is positioned at ' +
+            'the head of the second line', function() { issueCommand(0xC0); }
+
+        ],
+        // Step 9
+        [
+            'Write data to CGRAM/DDRAM', 'Writes M.', function () {
+                issueCommand('M'.charCodeAt(0), false, true);
+            }
+        ],
+        // Step 10 - 11
+        [
+            'Write data to CGRAM/DDRAM', 'Writes data.', function () {
+                var w = 'ICROCO';
+                for (var i = 0; i < w.length; i++)
+                    issueCommand(w.charCodeAt(i), false, true);
+            }
+        ],
+        // Step 12
+        [
+            'Entry mode set', 'Sets mode to shift display at the time of write.',
+            function() { issueCommand(0x07); }
+        ],
+        // Step 13
+        [
+            'Write data to CGRAM/DDRAM', 'Writes M.', function () {
+                issueCommand('M'.charCodeAt(0), false, true);
+            }
+        ],
+        // Step 14
+        [
+            'Write data to CGRAM/DDRAM', 'Writes data.', function () {
+                var w = 'PUTER';
+                for (var i = 0; i < w.length; i++)
+                    issueCommand(w.charCodeAt(i), false, true);
+            }
+        ],
+        // Step 15
+        [
+            'Return home', 'Returns both display and cursor to the original position (address 0).',
+            function () { issueCommand(0x02); }
+        ]
+    ];
+
     var abc = 0;
+    var selectedExample = exampleOneLineDisplay;
     $(window).keypress(function(ev) {
         if (ev.keyCode == 13) {
-            if (abc >= exampleOneLineDisplay.length)
+            if (abc >= selectedExample.length)
                 return;
-            var inst = exampleOneLineDisplay[abc++];
-            console.log('Step ' + abc + ' ---> ' + inst[0] + ': ' + inst[1]);
+            var inst = selectedExample[abc++];
             inst[2]();
             var tr = $('<tr />').appendTo('table');
 
@@ -199,14 +284,37 @@
         }
     });
 
-    var lcd = function(service, charsPerLine, parent) {
+    $(function() {
+        $('select').change(function () {
+            var s = [
+                [exampleOneLineDisplay, 8], [exampleTwoLineDisplay, 8],
+                [exampleOneLineDisplay, 16], [exampleTwoLineDisplay, 16]
+            ];
+            selectedExample = s[this.value][0];
+            $('table tbody').children().remove();
+            abc = 0;
+            lcdc = new ARM.Simulator.Devices.HD44780U(0);
+            lcdc.OnRegister(service);
+            testlcd = new lcd(service, {
+                secondDisplayLine: selectedExample == exampleTwoLineDisplay,
+                charactersPerLine: s[this.value][1]
+            });
+        });
+    });
+
+    var lcd = function(service, opts) {
         this.dom = $('<div class="lcd"/>');
         this.shiftOffset = 0;
-        this.charsPerLine = charsPerLine;
+        this.charsPerLine = 8;
+        this.secondDisplayLine = false;
 
-        this.ctor = function() {
-            if (parent)
-                $(parent).append(this.dom);
+        this.ctor = function () {
+            if (opts && opts.charactersPerLine)
+                this.charsPerLine = opts.charactersPerLine;
+            if (opts && opts.domParent)
+                $(opts.domParent).append(this.dom);
+            if (opts && opts.secondDisplayLine)
+                this.secondDisplayLine = true;
             var that = this;
             $(service)
                 .on('HD44780U.ClearDisplay', function(e, a) {
@@ -233,8 +341,16 @@
                 .on('HD44780U.DDRamAddressSet', function(e, a) {
                     that.ddRamAddressSet.call(that, a);
                 });
-            for (var i = 0; i < this.charsPerLine; i++)
-                this.dom.append('<div />');
+            this.buildDOM();
+        }
+
+        this.buildDOM = function () {
+            for (var i = 0; i < (this.secondDisplayLine ? 2 : 1); i++) {
+                var l = $('<div class="lcd-line"/>');
+                for (var c = 0; c < this.charsPerLine; c++)
+                    l.append('<div />');
+                this.dom.append(l);
+            }
         }
 
         this.clearDisplay = function(args) {
@@ -281,15 +397,24 @@
 
         this.updateCursor = function(args) {
             // Remove all styles
-            this.dom.children().removeClass('cursor blink');
+            this.dom.children('.lcd-line').children().removeClass('cursor blink');
             // If turned off, don't bother
             if (!args.displayEnabled || !args.showCursor)
                 return;
             var cursorPos = args.addressCounter - this.shiftOffset;
             // Is cursor position outside of n-digit panel?
-            if (cursorPos < 0 || cursorPos > (this.charsPerLine - 1))
-                return;
-            var cell = this.dom
+            var line = 'first';
+            if (cursorPos < 0 || cursorPos > (this.charsPerLine - 1)) {
+                if(!this.secondDisplayLine)
+                    return;
+                if (cursorPos < 0x40 || cursorPos > (0x40 + (this.charsPerLine - 1)))
+                    return;
+                else {
+                    line = 'nth-child(2)';
+                    cursorPos = cursorPos - 0x40;
+                }
+            }
+            var cell = this.dom.children('.lcd-line:' + line)
                 .children('div:nth-child(' + (1 + cursorPos) + ')')
                 .addClass('cursor');
             if (args.cursorBlink)
@@ -301,17 +426,30 @@
                 return;
             var inc = shiftRight !== undefined ? (!shiftRight) : args.incrementAddressCounter;
             this.shiftOffset = this.shiftOffset + (inc ? 1 : -1);
-            if (this.shiftOffset == 80)
+            var max = this.secondDisplayLine ? 40 : 80;
+            if (this.shiftOffset == max)
                 this.shiftOffset = 0;
             if (this.shiftOffset < 0)
-                this.shiftOffset = 80 - 1;
+                this.shiftOffset = max - 1;            
         }
 
         this.updatePanel = function(args) {
-            var cells = this.dom.children();
-            for (var i = 0; i < this.charsPerLine; i++) {
-                var ddIndex = (this.shiftOffset + i) % 80;
-                var character = args.characterRom[args.ddRam[ddIndex]];
+            var cells = this.dom.children('.lcd-line:first').children(),
+                i,
+                ddIndex,
+                character,
+                max = this.secondDisplayLine ? 40 : 80;
+            for (i = 0; i < this.charsPerLine; i++) {
+                ddIndex = (this.shiftOffset + i) % max;
+                character = args.characterRom[args.ddRam[ddIndex]];
+                $(cells.get(i)).text(character);
+            }
+            if (!this.secondDisplayLine)
+                return;
+            cells = this.dom.children('.lcd-line:nth-child(2)').children();
+            for (i = 0; i < this.charsPerLine; i++) {
+                ddIndex = 40 + ((this.shiftOffset + i + 40) % max);
+                character = args.characterRom[args.ddRam[ddIndex]];
                 $(cells.get(i)).text(character);
             }
         }
@@ -319,7 +457,7 @@
         this.ctor.call(this, service, parent);
     }
 
-    var testlcd = new lcd(service, 8);
+    var testlcd = new lcd(service);
 </script>
 <table>
     <thead>
@@ -328,7 +466,10 @@
             Hitachi HD44780U
             <p/>
             <select>
-                <option value="1">Operation, 8-Digit × 1-Line Display Example with Internal Reset</option>
+                <option value="0">8-Bit Operation, 8-Digit × 1-Line Display Example with Internal Reset</option>
+                <option value="1">8-Bit Operation, 8-Digit × 2-Line Display Example with Internal Reset</option>
+                <option value="2">8-Bit Operation, 16-Digit × 1-Line Display Example with Internal Reset</option>
+                <option value="3">8-Bit Operation, 16-Digit × 2-Line Display Example with Internal Reset</option>
             </select>
             <p/>
             Press 'ENTER' to execute a single instruction
