--- a/Tests/index.html
+++ b/Tests/index.html
@@ -30,6 +30,7 @@
   <script src="../Simulator/Devices/Timer.js" data-test></script>
   <script src="../Simulator/Devices/TL16C750.js" data-test></script>
   <script src="../Simulator/Devices/Watchdog.js" data-test></script>
+  <script src="../Simulator/Devices/GPIO.js" data-test></script>
   <script src="../Simulator/Vm.js" data-test></script>
 
   <script>
