--- a/Tests/index.html
+++ b/Tests/index.html
@@ -32,6 +32,7 @@
   <script src="../Simulator/Devices/Watchdog.js" data-test></script>
   <script src="../Simulator/Devices/GPIO.js" data-test></script>
   <script src="../Simulator/Vm.js" data-test></script>
+  <script src="../Simulator/Util/BinaryReader.js" data-test></script>
 
   <script>
     var smaps  = {},
