--- a/Tests/index.html
+++ b/Tests/index.html
@@ -18,9 +18,12 @@
   <script src="../Simulator/CpuState.js"></script>
   <script src="../Simulator/DataType.js"></script>
   <script src="../Simulator/Device.js"></script>
-  <script src="../Simulator/Helper.js"></script>
+  <script src="../Simulator/Util/Helper.js"></script>
   <script src="../Simulator/Region.js"></script>
   <script src="MockService.js"></script>
+  <script src="../Simulator/Elf/ElfSegment.js"></script>
+  <script src="../Simulator/Elf/ElfMachine.js"></script>
+  <script src="../Simulator/Elf/ElfType.js"></script>
 
   <script src="../Simulator/Cpu.js" data-test></script>
   <script src="../Simulator/Memory.js" data-test></script>
@@ -33,6 +36,7 @@
   <script src="../Simulator/Devices/GPIO.js" data-test></script>
   <script src="../Simulator/Vm.js" data-test></script>
   <script src="../Simulator/Util/BinaryReader.js" data-test></script>
+  <script src="../Simulator/Elf/Elf32.js" data-test></script>
 
   <script>
     var smaps  = {},
