ELF Loading Unit-Tests

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -22,6 +22,8 @@
   <script src="../Simulator/Region.js"></script>
   <script src="MockService.js"></script>
   <script src="../Simulator/Elf/ElfSegment.js"></script>
+  <script src="../Simulator/Elf/ElfSegmentFlag.js"></script>
+  <script src="../Simulator/Elf/ElfSegmentType.js"></script>
   <script src="../Simulator/Elf/ElfMachine.js"></script>
   <script src="../Simulator/Elf/ElfType.js"></script>
 
