--- a/Web/index.html
+++ b/Web/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="Assets/js/codemirror.js"></script>
-    <script type="text/javascript" src="Assets/js/armv4t.js"></script>
+    <script type="text/javascript" src="Assets/js/codemirror.armv4t.js"></script>
     <script type="text/javascript" src="Assets/js/gui.js"></script>
     <script type="text/javascript" src="Assets/js/devboard.js"></script>
     <script type="text/javascript" src="Assets/js/exampleELF.js"></script>
