Polishing up GUI stuff

--- a/Web/index.html
+++ b/Web/index.html
@@ -6,10 +6,11 @@
       var describe = describe || function() {};
     </script>
     <script type="text/javascript" src="arm.js"></script>
-    <script type="text/javascript" src="Assets/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="Assets/js/jquery-3.0.0.min.js"></script>
     <script type="text/javascript" src="Assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="Assets/js/codemirror.js"></script>
     <script type="text/javascript" src="Assets/js/codemirror.armv4t.js"></script>
+    <script type="text/javascript" src="Assets/js/lcd.js"></script>
     <script type="text/javascript" src="Assets/js/gui.js"></script>
     <script type="text/javascript" src="Assets/js/exampleELF.js"></script>
     <link rel="stylesheet" href="Assets/css/codemirror.css" />
@@ -165,38 +166,6 @@
                               <div class="led" id="led-7"></div>
                             </div>
                             <div id="lcd">
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-0"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-1"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-2"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-3"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-4"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-5"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-6"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-7"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-8"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-9"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-10"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-11"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-12"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-13"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-14"></div>
-                              <div class="lcd-cell lcd-row-0" id="lcd-cell-15"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-16"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-17"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-18"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-19"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-20"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-21"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-22"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-23"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-24"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-25"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-26"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-27"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-28"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-29"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-30"></div>
-                              <div class="lcd-cell lcd-row-1" id="lcd-cell-31"></div>
                             </div>
                           </div>
                         </td>
